fixed horizontal overflow

--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body,
 html {
+  padding: 0;
   margin: 0;
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
   background-color: #f3f4f5;
+  /* overflow-x: hidden; */
 }
 
 /*====================H E R O================*/
@@ -39,6 +41,7 @@ nav {
   width: 100%;
   height: 60px;
   position: fixed;
+  top: 0;
   z-index: 1;
   border-radius: 0% 0% 100% 100% / 0% 0% 30% 30%;
   border-bottom: 4px solid #f8d35f;
@@ -59,9 +62,7 @@ nav ul {
 }
 nav ul > :last-child {
   color: #f8d35f;
-  transition-duration: 200ms;
-  transition-property: color;
-  transition-timing-function: ease-in;
+  transition: all 0.2s ease;
 }
 nav ul > :last-child:hover {
   color: #fff;
@@ -169,8 +170,7 @@ nav li {
   }
 
   50% {
-    transform: translateY(15px);
-    text-shadow: 2px 2px 2px #f8d35f;
+    transform: translateY(17px);
   }
 
   100% {
@@ -357,16 +357,17 @@ div.item {
   font-size: 1.8vw;
   font-weight: 700;
   color: #fff;
-  opacity: 0.8;
+  opacity: 1;
+  box-shadow: 0px 12px 9px -5px #f3f4f5;
 }
 
-.box:hover {
+/* .box:hover {
   transform: scale(1.1);
   box-shadow: 0px 12px 9px -5px #f3f4f5;
   opacity: 1;
   border-color: #fff;
   z-index: 1;
-}
+} */
 
 .grid_item_1 {
   width: 60%;
@@ -401,15 +402,13 @@ div.item {
 
 #skill_title {
   color: #fff;
-  transition: opacity 2.5s ease, transform 1.3s ease;
+  transition: opacity 2s ease;
   font-weight: 700;
   font-size: 2.7vw;
   opacity: 0;
-  transform: translateX(170%);
 }
 #skill_title.scrolled {
   opacity: 1;
-  transform: translateX(-10%);
 }
 
 #skill_title > li {
@@ -758,7 +757,6 @@ footer {
     left: 100%;
     width: 40%;
     height: 100vh;
-    box-sizing: border-box;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -1000,7 +998,6 @@ footer {
   /*======================================CONTACT========================*/
   .contact {
     border-radius: 50% 50% 0% 0% / 2% 2% 0% 0%;
-    border-bottom: solid red;
   }
 
   .contact_wrapper {
@@ -1033,7 +1030,6 @@ footer {
   #form {
     width: 100%;
     margin: auto;
-    border: 1px solid red;
     display: flex;
     flex-direction: column;
     align-items: center;
